# dmx_light_ctrl

./: .gitignore  CMakeLists.txt  Makefile  README.md  go.mod  go.sum  main.c  mock-data.csv
cmd/: main.c
cmd/local/: main.go
cmd/raspberry/: main.go
internal/domain/: domain.go
internal/service/config/: config.go
internal/service/demo_svc/: service.go
internal/service/dmx_svc/: mock-diagram.html  tm512ac_impl.go
internal/service/server/: server.go
lib/demo_svc/: demo_svc.c  demo_svc.h
lib/dmx_svc/: dmx_svc.c  dmx_svc.h  impl_tm512ac.h
rpi_zero_attempt/: Makefile  go.sum  mock-diagram.html
rpi_zero_attempt/cmd/raspberry/: main.go
rpi_zero_attempt/internal/service/dmx_svc/: model.go  service.go
rpi_zero_attempt/internal/service/logger/: logger.go
rpi_zero_attempt/internal/service/server/: server.go
rpi_zero_attempt/internal/service/server/swagger/: index.html  swagger_gen.yaml
rpi_zero_attempt/scripts/: download_img.sh  write_sd_img.sh
